--- a/index.html
+++ b/index.html
@@ -174,22 +174,30 @@
     @media (prefers-reduced-motion: reduce){*{animation:none !important; transition:none !important}}
 
 /* ---------- Hero image area ---------- */
-.hero--image{
-  max-width:1100px;
-  padding: calc(64px + 6vh) clamp(16px, 4vw, 24px) 12vh; /* space below fixed header */
-  margin:auto;
-  text-align:center;
+@keyframes fadeInOpacity {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
 
-.hero-image{
-  display:block;
-  margin: 12px auto 0;
-  width: min(760px, 90vw);
-  height:auto;
-  filter: drop-shadow(0 10px 24px rgba(0,0,0,.55))
-          drop-shadow(0 0 14px rgba(255,215,0,.20)); /* subtle gold glow */
-  image-rendering:auto;
+@keyframes floatUpDown {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-12px); }
+  100% { transform: translateY(0); }
 }
+
+.hero-image {
+  display: block;
+  margin: 12px auto 0;
+  width: 500px;
+  max-width: 95%;
+  height: auto;
+  filter: drop-shadow(0 10px 24px rgba(0,0,0,.55))
+          drop-shadow(0 0 14px rgba(255,215,0,.20));
+  image-rendering: auto;
+  opacity: 0;
+  animation: fadeInOpacity 1s ease-out forwards, floatUpDown 5s ease-in-out infinite;
+}
+
 
 /* Optional: tighten on very small screens */
 @media (max-width:480px){
@@ -245,6 +253,11 @@
     <p>Use the menu to access the Legacy Foundation and our 40th Anniversary archive. More sections coming soon.</p>
   </main>
 
+  <footer>
+  © <span id="year"></span> Sigma Nu Kappa Rho · UC San Diego
+</footer>
+
+
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
@@ -280,4 +293,5 @@
   </script>
 </body>
 </html>
+
 
