--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Sigma Nu – Kappa Rho</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Inter:wght@300;400;600&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
+
 
   <style>
     :root{
@@ -15,6 +17,15 @@
       --gold2:#ffb02e;
       --hair:rgba(255,255,255,0.08);
     }
+
+    :root { --header-h: 64px; } /* match .site-header height */
+.hero{
+  padding-top: calc(var(--header-h) + 12vh); /* was calc(64px + 10vh) */
+}
+@media (max-width: 520px){
+  .hero{ padding-top: calc(var(--header-h) + 8vh); }
+}
+
 
     html{scroll-behavior:smooth}
     body{
@@ -152,14 +163,18 @@
       backdrop-filter:saturate(115%) blur(4px); background:rgba(255,255,255,0.03);
     }
     .hero h1{
-      margin:0 0 10px;
-      font-family:"DM Serif Display",serif;
-      font-size: clamp(2.2rem, 5vw, 3.6rem); line-height:1.1;
-      background:linear-gradient(90deg, var(--gold1), var(--gold2));
-      -webkit-background-clip:text; -webkit-text-fill-color:transparent;
-      text-shadow:0 0 18px rgba(255,215,0,0.28);
-      letter-spacing:.5px;
-    }
+  font-family: "Cinzel", serif;
+  font-weight: 700;
+  letter-spacing: .5px;    /* keep your current spacing */
+  margin: 0 0 10px;
+  font-size: clamp(2.2rem, 5vw, 3.6rem);
+  line-height: 1.1;
+  background: linear-gradient(90deg, var(--gold1), var(--gold2));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 0 0 18px rgba(255,215,0,0.28);
+}
+
     .hero p{
       margin:0 auto; max-width:820px; color:#e5e5e5; font-size: clamp(1rem, 2.1vw, 1.15rem); opacity:.9;
     }
@@ -205,6 +220,28 @@
   .hero-image{ width: min(640px, 92vw); }
 }
 
+
+.gold-btn {
+  display: inline-block;
+  margin-top: 2rem;
+  padding: 0.9rem 1.8rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  color: #000;
+  text-decoration: none;
+  background: linear-gradient(90deg, #ffd700, #ffb02e);
+  border: none;
+  border-radius: 999px;
+  box-shadow: 0 0 16px rgba(255, 215, 0, 0.35);
+  transition: all 0.25s ease;
+}
+
+.gold-btn:hover {
+  transform: translateY(-2px) scale(1.03);
+  box-shadow: 0 0 24px rgba(255, 215, 0, 0.55);
+}
+
     
   </style>
 </head>
@@ -239,8 +276,15 @@
           40th Anniversary (Archive)
           <span class="sub">Photos, schedule, weekend materials</span>
         </a>
+        <a href="https://forms.gle/AEqkNnboj5LtCy8C6" target="_blank" rel="noopener">
+        Alumni Advisory Board
+        <span class="sub">Interest Form to Join</span>
+        </a>
+        <a href="https://forms.gle/EZPrBfjeUycf1QKR7" target="_blank" rel="noopener">
+        LEAD Sessions Interest Form
+        <span class="sub">Be a LEAD Session Guest Speaker</span>
+        </a>
       </div>
-      <div class="nav-footer">© Sigma Nu Kappa Rho · UC San Diego</div>
     </nav>
   </aside>
 
@@ -250,7 +294,14 @@
      <img src="./quarter-zip-nobg.png"
        alt="Sigma Nu quarter-zip"
        class="hero-image">
-    <p>Use the menu to access the Legacy Foundation and our 40th Anniversary archive. More sections coming soon.</p>
+    <p>Welcome to the new hub for everything Kappa Rho! This website is still heavily under development and in its early stages. 
+      Use the menu to access pages for the Legacy Foundation, 40th Anniversary archive, Alumni Advisory Board Interest Form, and LEAD Session Interest Form. 
+      More sections coming soon.</p>
+
+    <a href="https://docs.google.com/spreadsheets/d/12Q5SwFzKwP17TxVvZODEQqGuYCIkw33ih6eWWkQtixU/edit?usp=sharing" 
+   class="gold-btn">
+  View Contact Directory
+</a>
   </main>
 
   <footer>
@@ -293,5 +344,6 @@
   </script>
 </body>
 </html>
+
 
 
