--- a/40th.html
+++ b/40th.html
@@ -810,37 +810,30 @@
 .legacy-button {
   display: inline-block;
   padding: 0.75rem 1.5rem;
-  background: transparent;
-  color: #f5f5f5;
-  border: 1px solid rgba(255, 255, 255, 0.75);
+  background: gold;              /* gold button */
+  color: #111;                   /* dark text for contrast */
+  border: 1px solid gold;
   border-radius: 10px;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1rem;
   letter-spacing: 0.4px;
   text-decoration: none;
   transition: all 0.25s ease;
-  box-shadow: 0 0 12px rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(3px);
+  box-shadow: 0 0 12px rgba(255, 215, 0, 0.25);
 }
 
 .legacy-button:hover {
-  background: rgba(255, 255, 255, 0.9);
-  color: #000;
-  transform: translateY(-2px);
-  box-shadow: 0 0 18px rgba(255, 255, 255, 0.4);
+  transform: translateY(-2px) scale(1.02);
+  box-shadow: 0 0 20px rgba(255, 215, 0, 0.55);
 }
 
-@keyframes subtleGlow {
-  0% { box-shadow: 0 0 8px rgba(255, 255, 255, 0.25); }
-  50% { box-shadow: 0 0 18px rgba(255, 255, 255, 0.45); }
-  100% { box-shadow: 0 0 8px rgba(255, 255, 255, 0.25); }
+/* Optional: a subtle pulsing gold glow */
+@keyframes subtleGoldGlow {
+  0% { box-shadow: 0 0 10px rgba(255,215,0,0.25); }
+  50% { box-shadow: 0 0 22px rgba(255,215,0,0.45); }
+  100% { box-shadow: 0 0 10px rgba(255,215,0,0.25); }
 }
-
-.legacy-button {
-  animation: subtleGlow 3s ease-in-out infinite;
-}
-
-  
+.legacy-button { animation: subtleGoldGlow 3s ease-in-out infinite; }  
 
 
 
@@ -868,7 +861,7 @@
     <div><span id="seconds">00</span><small>Seconds</small></div>
   </div>
   <div class="legacy-link" data-aos="fade-up" data-aos-delay="200">
-    <a href="https://sigmanukapparho.org/legacy" class="legacy-button">Visit the Legacy Foundation →</a>
+<a href="https://drive.google.com/drive/folders/1ZoVIAF7eunR0Ks1sGgsZm8LLZTgm_S7D" class="legacy-button">Photos from the Weekend →</a>
   </div>
 
 </header>
