--- a/index.html
+++ b/index.html
@@ -274,12 +274,38 @@
   background:#0e0e0e; color:#fff;
   border:1px solid rgba(255,255,255,.16);
   padding:0 12px; font-size:1rem;
-  outline:none; transition:border-color .18s ease, box-shadow .18s ease;
+  outline:none; transition:border-color .16s ease, box-shadow .16s ease;
 }
 .modal-input:focus{
-  border-color: rgba(255,215,0,.55);
-  box-shadow: 0 0 0 3px rgba(255,215,0,.18);
+  border-color: rgba(255,215,0,.60);
+  box-shadow: 0 0 0 2px rgba(255,215,0,.22);
 }
+/* invalid state */
+.modal-input.is-invalid{
+  border-color: rgba(255,77,79,.95);
+  box-shadow: 0 0 0 2px rgba(255,77,79,.28);
+}
+
+.modal-error{
+  display:none; margin:8px 0 10px;
+  font-size:.92rem; color:#ffb7b7;
+  background:rgba(255,77,79,.08);
+  border:1px solid rgba(255,77,79,.35);
+  padding:8px 10px; border-radius:10px;
+}
+.modal-error.show{ display:block; animation:fadeIn .12s ease-out; }
+
+@keyframes fadeIn{ from{opacity:0; transform:translateY(-2px)} to{opacity:1; transform:none} }
+@keyframes shake{
+  0%,100%{ transform:translateX(0) }
+  20%{ transform:translateX(-6px) }
+  40%{ transform:translateX(6px) }
+  60%{ transform:translateX(-4px) }
+  80%{ transform:translateX(4px) }
+}
+.modal-dialog.shake{ animation:shake .35s ease; }
+
+    
 .modal-actions{ display:flex; gap:10px; justify-content:flex-end; margin-top:12px; }
 .btn{
   height:40px; padding:0 14px; border-radius:999px; border:1px solid transparent;
@@ -309,6 +335,45 @@
     background: rgba(0,0,0,.95);
     box-shadow: 14px 0 30px rgba(0,0,0,.55);
     border-right: 1px solid rgba(255,255,255,.08);
+  }
+}
+
+    /* Compact modal layout on mobile */
+@media (max-width: 520px){
+  .modal-dialog{
+    width: 92vw;             /* fit to screen width */
+    margin-top: 18vh;        /* slightly lower on screen */
+    padding: 16px 14px 14px;
+    border-radius: 14px;
+  }
+
+  .modal-dialog h3{
+    font-size: 1.1rem;
+    text-align: center;
+  }
+
+  .modal-sub{
+    font-size: .9rem;
+    text-align: center;
+  }
+
+  .modal-input{
+    height: 42px;
+    font-size: .95rem;
+    padding: 0 10px;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .modal-actions{
+    flex-direction: column;
+    align-items: stretch;
+    gap: 8px;
+  }
+
+  .btn{
+    width: 100%;
+    font-size: .95rem;
   }
 }
 
@@ -377,6 +442,8 @@
   <div class="modal-dialog" role="document" aria-labelledby="pwTitle">
     <h3 id="pwTitle">Enter Access Password</h3>
     <p class="modal-sub">Please enter the password to continue.</p>
+    <p id="pwError" class="modal-error" aria-live="polite" aria-atomic="true"></p>
+
     <input type="password" id="pwInput" class="modal-input" placeholder="Password" autocomplete="off" />
     <div class="modal-actions">
       <button type="button" class="btn ghost" id="pwCancel">Cancel</button>
@@ -460,6 +527,39 @@ pwSubmit?.addEventListener('click', tryAccess);
 pwInput?.addEventListener('keydown', (e)=>{ if(e.key === 'Enter') tryAccess(); });
 document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape' && pwModal.classList.contains('open')) closePwModal(); });
 
+const pwError  = document.getElementById('pwError');
+const modalDlg = document.querySelector('.modal-dialog');
+
+function clearError(){
+  pwInput.classList.remove('is-invalid');
+  pwInput.removeAttribute('aria-invalid');
+  pwError.textContent = '';
+  pwError.classList.remove('show');
+}
+
+function showError(msg){
+  pwInput.classList.add('is-invalid');
+  pwInput.setAttribute('aria-invalid','true');
+  pwError.textContent = msg;
+  pwError.classList.add('show');
+  modalDlg.classList.add('shake');
+  // light haptic on mobile (non-blocking)
+  if (navigator.vibrate) navigator.vibrate(35);
+  setTimeout(()=> modalDlg.classList.remove('shake'), 350);
+}
+
+function tryAccess(){
+  const v = (pwInput.value || '').trim().toLowerCase();
+  if(!v){ showError('Password required.'); pwInput.focus(); return; }
+  if(v === 'kp'){ window.location.href = DIR_URL; return; }
+  showError('Incorrect password. Please try again.');
+  pwInput.select();
+  pwInput.focus();
+}
+
+// clear error as they type
+pwInput.addEventListener('input', clearError);
+
     
   </script>
 
@@ -468,6 +568,7 @@ document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape' && pwModal.cla
   
 </body>
 </html>
+
 
 
 
