--- a/legacy.html
+++ b/legacy.html
@@ -130,28 +130,23 @@
 .roll-pill{
   display:inline-block; margin:0.35rem; padding:0.45rem 0.75rem; border:1px solid #2a2a2a; border-radius:999px; color:#cfcfcf;
 }
-/* Back to Home Button */
 .back-home {
   position: fixed;
-  top: 18px;
-  left: 18px;
-  font-size: 1.8rem;
-  color: #e0e0e0; /* silvery tone */
+  top: 22px;
+  left: 22px;
+  font-size: 2rem;
+  font-weight: 400;
+  color: #dcdcdc;
   text-decoration: none;
-  background: rgba(255, 255, 255, 0.08);
-  border: 1px solid rgba(255, 255, 255, 0.25);
-  border-radius: 8px;
-  padding: 4px 10px 6px 10px;
   z-index: 9999;
   transition: all 0.25s ease;
-  backdrop-filter: blur(4px);
+  text-shadow: 0 0 6px rgba(255, 255, 255, 0.25);
 }
+
 .back-home:hover {
   color: #ffffff;
-  background: rgba(255, 255, 255, 0.15);
-  border-color: rgba(255, 255, 255, 0.4);
-  transform: scale(1.05);
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+  text-shadow: 0 0 12px rgba(255, 255, 255, 0.55);
+  transform: translateX(-2px) scale(1.05);
 }
 
     
